初步适配完成：方块实体的codec